2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
        - Removed taint requirement from locally executed only scripts.
        - Fixed missing formatting for variables in Command Sets.
2.2.0   - Added handler for incorrect use of *WAITFOR and *SEND together in the same command.
        - Added the ability to pause a Job indefinitely from within a Command Set.
        - Changed the licence from GPLv3 to AGPLv3.
        - Added the ability to pause all running or resume all paused Jobs.
        - Fixed an issue with variables not being highlighted correctly.
        - Fixed an issue that displayed resolved variables in commands which could include sensitive data.
        - Generated Command Set dumps now include owner tags.
        - Fixed a bug where if a Command Set owner was deleted the Command Set was not reassigned (now reassigned to System).
        - Enforced Taint Mode. Several changes made to support this.
        - Added option to Job Receiver to output IDs of queued Jobs.
        - Fixed help output of Job Receiver.
        - Fixed a fault with Jobs triggering as public key auth if the decoder tried to decode an unencoded password.
        - Rewrote the snapshot system to use VMware's API. Added the ability to do restores and show snapshot trees.
2.1.1   - Fixed formatting on command line help outputs on job receiver and executor.
2.1.0   - Fixed dropdown in Command Sets that didn't adhere to new owner display system.
        - Changed a few icons for clarity.
        - Squashed a race condition that caused Jobs to register as unexpectedly terminated when they had successfully finished.
        - Fixed a bug where the Job receiver would die if a Job was queued but not run.
        - Added ability to inject variables at runtime (triggered by *VAR{VarNameHere}).
----------------
2.0.2   - Two Reboot checks merged into one for quicker response in Job Processor.