@@ -1,6 +1,8 @@
 2.2.1   - Fixed an issue with the IP allocation system reporting the wrong block when full.
         - Removed taint requirement from locally executed only scripts.
         - Fixed missing formatting for variables in Command Sets.
+        - Added minor username tag for snapshot tracking.
+        - Fixed a bug related to correctly capturing hashes where the key or value ended in '='. 
 2.2.0   - Added handler for incorrect use of *WAITFOR and *SEND together in the same command.
         - Added the ability to pause a Job indefinitely from within a Command Set.
         - Changed the licence from GPLv3 to AGPLv3.
